# zk_evm

./: Cargo.toml
compat/: Cargo.toml
trace_decoder/: Cargo.toml
trace_decoder/src/: types.rs
zero_bin/leader/src/: cli.rs  client.rs  main.rs
zero_bin/rpc/: Cargo.toml
zero_bin/rpc/src/: lib.rs  reth.rs
