[package]
name = "compat"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = {workspace = true }
__compat_primitive_types = { workspace = true }